feat(db): add batches_with_stats view
